add_executable(countApplesAndOranges countApplesAndOranges.cpp)
target_link_libraries(countApplesAndOranges unittests)

add_executable(formingMagicSquare formingMagicSquare.cpp)
target_link_libraries(formingMagicSquare unittests)

add_executable(larrysArray larrysArray.cpp)
target_link_libraries(larrysArray unittests)

add_executable(timeInWords timeInWords.cpp)
target_link_libraries(timeInWords unittests)

add_executable(biggerIsGreater biggerIsGreater.cpp)
target_link_libraries(biggerIsGreater unittests)

add_executable(twoSubsequences twoSubsequences.cpp)
target_link_libraries(twoSubsequences unittests)

add_executable(missingNumbers missingNumbers.cpp)
target_link_libraries(missingNumbers unittests)

add_executable(balancedSums balancedSums.cpp)
target_link_libraries(balancedSums unittests)

add_executable(twoArrays twoArrays.cpp)
target_link_libraries(twoArrays unittests)

add_executable(jimOrders jimOrders.cpp)
target_link_libraries(jimOrders unittests)

add_executable(arraySplitting arraySplitting.cpp)
target_link_libraries(arraySplitting unittests)

add_executable(mandragora mandragora.cpp)
target_link_libraries(mandragora unittests)

add_executable(graph_shortest_reach graph_shortest_reach.cpp)
target_link_libraries(graph_shortest_reach unittests)

add_executable(candies candies.cpp)
target_link_libraries(candies unittests)
