add_executable(myatio2 myatio2.cpp)
target_link_libraries(myatio2 unittests)

add_executable(3Sum 3Sum.cpp)
target_link_libraries(3Sum unittests)

add_executable(searchInsert searchInsert.cpp)
target_link_libraries(searchInsert unittests)

add_executable(countAndSay countAndSay.cpp)
target_link_libraries(countAndSay unittests)

add_executable(maxArea maxArea.cpp)
target_link_libraries(maxArea unittests)

add_executable(intToRoman intToRoman.cpp)
target_link_libraries(intToRoman unittests)

add_executable(3SumClosest 3SumClosest.cpp)
target_link_libraries(3SumClosest unittests)

add_executable(letterCombinations letterCombinations.cpp)
target_link_libraries(letterCombinations unittests)

add_executable(fourSum fourSum.cpp)
target_link_libraries(fourSum unittests)

add_executable(findContentChildren findContentChildren.cpp)
target_link_libraries(findContentChildren unittests)

add_executable(reachableNodes reachableNodes.cpp)
target_link_libraries(reachableNodes unittests)

add_executable(findRedundantConnection findRedundantConnection.cpp)
target_link_libraries(findRedundantConnection unittests)

add_executable(maxIncreaseKeepingSkyline maxIncreaseKeepingSkyline.cpp)
target_link_libraries(maxIncreaseKeepingSkyline unittests)

add_executable(bstToGst bstToGst.cpp)
target_link_libraries(bstToGst unittests)
