add_executable(myatio2 myatio2.cpp)
target_link_libraries(myatio2 unittests)

add_executable(3Sum 3Sum.cpp)
target_link_libraries(3Sum unittests)

add_executable(searchInsert searchInsert.cpp)
target_link_libraries(searchInsert unittests)

add_executable(countAndSay countAndSay.cpp)
target_link_libraries(countAndSay unittests)

add_executable(maxArea maxArea.cpp)
target_link_libraries(maxArea unittests)

add_executable(intToRoman intToRoman.cpp)
target_link_libraries(intToRoman unittests)

add_executable(3SumClosest 3SumClosest.cpp)
target_link_libraries(3SumClosest unittests)

add_executable(letterCombinations letterCombinations.cpp)
target_link_libraries(letterCombinations unittests)

add_executable(fourSum fourSum.cpp)
target_link_libraries(fourSum unittests)

add_executable(findContentChildren findContentChildren.cpp)
target_link_libraries(findContentChildren unittests)

add_executable(reachableNodes reachableNodes.cpp)
target_link_libraries(reachableNodes unittests)

add_executable(findRedundantConnection findRedundantConnection.cpp)
target_link_libraries(findRedundantConnection unittests)

add_executable(maxIncreaseKeepingSkyline maxIncreaseKeepingSkyline.cpp)
target_link_libraries(maxIncreaseKeepingSkyline unittests)

add_executable(bstToGst bstToGst.cpp)
target_link_libraries(bstToGst unittests)

add_executable(widthOfBinaryTree widthOfBinaryTree.cpp)
target_link_libraries(widthOfBinaryTree unittests)

add_executable(pascalTriangle pascalTriangle.cpp)
target_link_libraries(pascalTriangle unittests)

add_executable(kClosest kClosest.cpp)
target_link_libraries(kClosest unittests)

add_executable(powerSet powerSet.cpp)
target_link_libraries(powerSet unittests)

add_executable(rotate90 rotate90.cpp)
target_link_libraries(rotate90 unittests)

add_executable(licenseKeyFormatting licenseKeyFormatting.cpp)
target_link_libraries(licenseKeyFormatting unittests)

add_executable(lengthLongestPath lengthLongestPath.cpp)
target_link_libraries(lengthLongestPath unittests)

add_executable(QueueWithStacks QueueWithStacks.cpp)
target_link_libraries(QueueWithStacks unittests)

add_executable(findItinerary findItinerary.cpp)
target_link_libraries(findItinerary unittests)

add_executable(updateMatrix updateMatrix.cpp)
target_link_libraries(updateMatrix unittests)

add_executable(gameOfLife gameOfLife.cpp)
target_link_libraries(gameOfLife unittests)

add_executable(searchRotatedArrayII searchRotatedArrayII.cpp)
target_link_libraries(searchRotatedArrayII unittests)
