add_executable(myatio2 myatio2.cpp)
target_link_libraries(myatio2 unittests)

add_executable(3Sum 3Sum.cpp)
target_link_libraries(3Sum unittests)

add_executable(searchInsert searchInsert.cpp)
target_link_libraries(searchInsert unittests)

add_executable(countAndSay countAndSay.cpp)
target_link_libraries(countAndSay unittests)

add_executable(maxArea maxArea.cpp)
target_link_libraries(maxArea unittests)

add_executable(intToRoman intToRoman.cpp)
target_link_libraries(intToRoman unittests)

add_executable(3SumClosest 3SumClosest.cpp)
target_link_libraries(3SumClosest unittests)

add_executable(letterCombinations letterCombinations.cpp)
target_link_libraries(letterCombinations unittests)

add_executable(fourSum fourSum.cpp)
target_link_libraries(fourSum unittests)

add_executable(findContentChildren findContentChildren.cpp)
target_link_libraries(findContentChildren unittests)

add_executable(reachableNodes reachableNodes.cpp)
target_link_libraries(reachableNodes unittests)

add_executable(findRedundantConnection findRedundantConnection.cpp)
target_link_libraries(findRedundantConnection unittests)

add_executable(maxIncreaseKeepingSkyline maxIncreaseKeepingSkyline.cpp)
target_link_libraries(maxIncreaseKeepingSkyline unittests)

add_executable(bstToGst bstToGst.cpp)
target_link_libraries(bstToGst unittests)

add_executable(widthOfBinaryTree widthOfBinaryTree.cpp)
target_link_libraries(widthOfBinaryTree unittests)

add_executable(pascalTriangle pascalTriangle.cpp)
target_link_libraries(pascalTriangle unittests)

add_executable(kClosest kClosest.cpp)
target_link_libraries(kClosest unittests)

add_executable(powerSet powerSet.cpp)
target_link_libraries(powerSet unittests)

add_executable(rotate90 rotate90.cpp)
target_link_libraries(rotate90 unittests)

add_executable(licenseKeyFormatting licenseKeyFormatting.cpp)
target_link_libraries(licenseKeyFormatting unittests)

add_executable(lengthLongestPath lengthLongestPath.cpp)
target_link_libraries(lengthLongestPath unittests)

add_executable(QueueWithStacks QueueWithStacks.cpp)
target_link_libraries(QueueWithStacks unittests)

add_executable(findItinerary findItinerary.cpp)
target_link_libraries(findItinerary unittests)

add_executable(updateMatrix updateMatrix.cpp)
target_link_libraries(updateMatrix unittests)

add_executable(gameOfLife gameOfLife.cpp)
target_link_libraries(gameOfLife unittests)

add_executable(searchRotatedArrayII searchRotatedArrayII.cpp)
target_link_libraries(searchRotatedArrayII unittests)

add_executable(numIslands numIslands.cpp)
target_link_libraries(numIslands unittests)

add_executable(maxProfit maxProfit.cpp)
target_link_libraries(maxProfit unittests)

add_executable(gcdOfStrings gcdOfStrings.cpp)
target_link_libraries(gcdOfStrings unittests)

add_executable(BSTFindTargetSum BSTFindTargetSum.cpp)
target_link_libraries(BSTFindTargetSum unittests)

add_executable(findShortestSubArray findShortestSubArray.cpp)
target_link_libraries(findShortestSubArray unittests)

add_executable(addTwoNumbers2 addTwoNumbers2.cpp)
target_link_libraries(addTwoNumbers2 unittests)

add_executable(trimBST trimBST.cpp)
target_link_libraries(trimBST unittests)

add_executable(triangle triangle.cpp)
target_link_libraries(triangle unittests)

add_executable(kclosest kclosest.cpp)
target_link_libraries(kclosest unittests)

add_executable(searchSortedMatrix searchSortedMatrix.cpp)
target_link_libraries(searchSortedMatrix unittests)

add_executable(spiralMatrixII spiralMatrixII.cpp)
target_link_libraries(spiralMatrixII unittests)

add_executable(maxSumOfThreeSubarrays maxSumOfThreeSubarrays.cpp)
target_link_libraries(maxSumOfThreeSubarrays unittests)

add_executable(maxBinaryTree maxBinaryTree.cpp)
target_link_libraries(maxBinaryTree unittests)

add_executable(bstFromPreorder bstFromPreorder.cpp)
target_link_libraries(bstFromPreorder unittests)

add_executable(combinationSum3 combinationSum3.cpp)
target_link_libraries(combinationSum3 unittests)

add_executable(largestRectangleArea largestRectangleArea.cpp)
target_link_libraries(largestRectangleArea unittests)

add_executable(nthUglyNumber nthUglyNumber.cpp)
target_link_libraries(nthUglyNumber unittests)

add_executable(relativeSortArray relativeSortArray.cpp)
target_link_libraries(relativeSortArray unittests)

add_executable(numberOfArithmeticSlices numberOfArithmeticSlices.cpp)
target_link_libraries(numberOfArithmeticSlices unittests)

add_executable(regularExpressionMatching regularExpressionMatching.cpp)
target_link_libraries(regularExpressionMatching unittests)

add_executable(reverse-nodes-in-k-group reverse-nodes-in-k-group.cpp)
target_link_libraries(reverse-nodes-in-k-group unittests)

add_executable(substring-with-concatenation-of-all-words substring-with-concatenation-of-all-words.cpp)
target_link_libraries(substring-with-concatenation-of-all-words unittests)

add_executable(longest-valid-parentheses longest-valid-parentheses.cpp)
target_link_libraries(longest-valid-parentheses unittests)

add_executable(find-first-and-last-position-of-element-in-sorted-array find-first-and-last-position-of-element-in-sorted-array.cpp)
target_link_libraries(find-first-and-last-position-of-element-in-sorted-array unittests)

add_executable(valid-sudoku valid-sudoku.cpp)
target_link_libraries(valid-sudoku unittests)

add_executable(sudoku-solver sudoku-solver.cpp)
target_link_libraries(sudoku-solver unittests)

add_executable(best-time-to-buy-and-sell-stock-II best-time-to-buy-and-sell-stock-II.cpp)
target_link_libraries(best-time-to-buy-and-sell-stock-II unittests)

add_executable(group-anagrams group-anagrams.cpp)
target_link_libraries(group-anagrams unittests)

add_executable(pascalTriangle2 pascalTriangle2.cpp)
target_link_libraries(pascalTriangle2 unittests)

add_executable(generateTrees generateTrees.cpp)
target_link_libraries(generateTrees unittests)

add_executable(counting-elements counting-elements.cpp)
target_link_libraries(counting-elements unittests)

add_executable(multiply-strings multiply-strings.cpp)
target_link_libraries(multiply-strings unittests)

add_executable(min-stack min-stack.cpp)
target_link_libraries(min-stack unittests)

add_executable(wildcard-matching wildcard-matching.cpp)
target_link_libraries(wildcard-matching unittests)

add_executable(binary-tree-diameter binary-tree-diameter.cpp)
target_link_libraries(binary-tree-diameter unittests)

add_executable(last-stone-weight last-stone-weight.cpp)
target_link_libraries(last-stone-weight unittests)

add_executable(jump-game-II jump-game-II.cpp)
target_link_libraries(jump-game-II unittests)

add_executable(permutations permutations.cpp)
target_link_libraries(permutations unittests)

add_executable(permutationsII permutationsII.cpp)
target_link_libraries(permutationsII unittests)

add_executable(contiguous-array contiguous-array.cpp)
target_link_libraries(contiguous-array unittests)

add_executable(perform_string_shift perform_string_shift.cpp)
target_link_libraries(perform_string_shift unittests)

add_executable(checkValidString checkValidString.cpp)
target_link_libraries(checkValidString unittests)

add_executable(spiralMatrix spiralMatrix.cpp)
target_link_libraries(spiralMatrix unittests)

add_executable(numIslands2 numIslands2.cpp)
target_link_libraries(numIslands2 unittests)

add_executable(minpathsum minpathsum.cpp)
target_link_libraries(minpathsum unittests)

add_executable(bst-from-preorder bst-from-preorder.cpp)
target_link_libraries(bst-from-preorder unittests)

add_executable(left-most-with-one left-most-with-one.cpp)
target_link_libraries(left-most-with-one unittests)

add_executable(subarry-sum subarry-sum.cpp)
target_link_libraries(subarry-sum unittests)

add_executable(isValidSequence isValidSequence.cpp)
target_link_libraries(isValidSequence unittests)

add_executable(n-queens n-queens.cpp)
target_link_libraries(n-queens unittests)

add_executable(n-queens-ii n-queens-ii.cpp)
target_link_libraries(n-queens-ii unittests)

add_executable(rotate-list rotate-list.cpp)
target_link_libraries(rotate-list unittests)

add_executable(unique-paths unique-paths.cpp)
target_link_libraries(unique-paths unittests)

add_executable(unique-paths-ii unique-paths-ii.cpp)
target_link_libraries(unique-paths-ii unittests)

add_executable(text-justification text-justification.cpp)
target_link_libraries(text-justification unittests)

add_executable(simplify-path simplify-path.cpp)
target_link_libraries(simplify-path unittests)

add_executable(edit-distance edit-distance.cpp)
target_link_libraries(edit-distance unittests)

add_executable(combinations combinations.cpp)
target_link_libraries(combinations unittests)

add_executable(word-search word-search.cpp)
target_link_libraries(word-search unittests)

add_executable(scramble-string scramble-string.cpp)
target_link_libraries(scramble-string unittests)

add_executable(distinct-subsequences-rs distinct-subsequences-rs.cpp)
target_link_libraries(distinct-subsequences-rs rslib unittests dl pthread)
