[package]
name = "leetcode"
version = "0.1.0"
authors = ["Jean-Christophe Pince <jcpince@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
path = "rslib.rs"


[[bin]]
name = "word-ladder-ii"
path = "word-ladder-ii.rs"

[[bin]]
name = "word-ladder"
path = "word-ladder.rs"

[[bin]]
name = "longest-consecutive-sequence"
path = "longest-consecutive-sequence.rs"

[[bin]]
name = "sum-root-to-leaf-numbers"
path = "sum-root-to-leaf-numbers.rs"

[[bin]]
name = "surrounded-regions"
path = "surrounded-regions.rs"

[[bin]]
name = "palindrome-partitioning"
path = "palindrome-partitioning.rs"

[[bin]]
name = "palindrome-partitioning-ii"
path = "palindrome-partitioning-ii.rs"

[[bin]]
name = "candy"
path = "candy.rs"

[[bin]]
name = "word-break"
path = "word-break.rs"

[[bin]]
name = "max-points-on-a-line"
path = "max-points-on-a-line.rs"

[[bin]]
name = "evaluate-reverse-polish-notation"
path = "evaluate-reverse-polish-notation.rs"

[[bin]]
name = "reverse-words-in-a-string"
path = "reverse-words-in-a-string.rs"

[[bin]]
name = "maximum-product-subarray"
path = "maximum-product-subarray.rs"

[dependencies]
algo_tools = { path = "../tools" }
json = "*"
